# kicad-skip

./: README.md  pyproject.toml
src/eeschema/: __init__.py
src/eeschema/examples/: symbols.py
src/eeschema/property/: __init__.py  property.py
src/eeschema/schematic/: __init__.py  container.py  schematic.py  symbol.py
src/eeschema/sexp/: parser.py  util.py
src/eeschema/sheet/: __init__.py  sheet.py
src/samp/: rp2040.kicad_sch  tinytapeout-demo.kicad_sch  tinytapeout-demo.net
src/skip/: __init__.py  at_location.py  collection.py  container.py  element_template.py
src/skip/eeschema/: junction.py  label.py  lib_symbol.py  pin.py  text.py  wire.py
src/skip/eeschema/schematic/: __init__.py  schematic.py  symbol.py
src/skip/eeschema/sheet/: __init__.py  sheet.py
src/skip/examples/: charlieplex.py  symbols.py
src/skip/pcbnew/: footprint.py  graphical.py  layer.py  net.py  segment.py
src/skip/pcbnew/pcb/: __init__.py  pcb.py
src/skip/property/: __init__.py  property.py
src/skip/sexp/: parser.py  sourcefile.py  util.py
